# protega

./: .gitignore  ANTI_FRAUD_GUIDE.md  ARCHITECTURE.md  BIOMETRIC_AUTH_IMPLEMENTATION.md  COFFEE_SHOP_DEPLOYMENT_GUIDE.md  CREATE_REPO_SIMPLE.md  DEPLOYMENT_COMPLETE.md  DEPLOY_CHECKLIST.md  DEPLOY_NOW.md  DUPLICATE_FINGERPRINT_PREVENTION.md  EASY_ENROLLMENT.md  FINGERPRINT_SDK_INTEGRATION.md  FINGERPRINT_STATUS.md  FINGERPRINT_TESTING_QUICK_START.md  FLY_DEPLOYMENT_GUIDE.md  FRONTEND_MULTI_CARD_GUIDE.md  FRONTEND_UPGRADE_SUMMARY.md  GITHUB_CLICK_BY_CLICK.md  GITHUB_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IPAD_POS_SETUP.md  LAUNCH_CHECKLIST.md  MERCHANT_SETUP_GUIDE.md  MULTIPLE_PAYMENT_METHODS.md  Makefile  OFFICIAL_DEMO_GUIDE.md  PILOT_LAUNCH_PACKAGE.md  PILOT_QUICK_START.md  PILOT_READY.md  PILOT_STATUS_CHECK.sh  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REAL_FINGERPRINT_INTEGRATION.md  REDESIGN_COMPLETE.md  SETUP_GITHUB.sh  START_HERE.md  START_PILOT_HERE.md  (+12 more)
backend/: Dockerfile  alembic.ini  fly.toml  pyproject.toml  railway.json  uvicorn.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_payment_method_fields.py  003_add_protega_fee_field.py  004_add_phone_field_and_auto_merchant.py  005_add_anti_fraud_fields.py  006_add_unique_constraints_fingerprint_phone_card.py  007_add_encrypted_fields.py  (+3 more)
backend/protega_api/: __init__.py  anti_fraud.py  compliance.py  config.py  db.py  deps.py  main.py  models.py  otp.py  schemas.py  security.py  security_enclave.py  seed.py
(+52 files in other folders)
