[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protega-api"
version = "0.1.0"
description = "Protega CloudPay - Biometric Payment API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "psycopg[binary]>=3.1.0",
    "stripe>=11.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "alembic>=1.13.0",
    "numpy>=1.24.0",  # For biometric similarity scoring
]

[tool.setuptools]
packages = ["protega_api"]

